--- a/page4.html
+++ b/page4.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="header1 cid-rmZx6NOr2H" id="header16-o">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="header1 cid-rmZx6NOr2H" id="header16-o">
 
     
 
@@ -81,8 +81,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">Bankruptcy - Discharge</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"><div>
-<span style="font-size: 1.5rem;"></span></div><div>If your conditional bankruptcy discharge was never completed
-</div><div>
+<span style="font-size: 1.5rem;"></span></div><div>If you have not received your bankruptcy discharge,&nbsp;</div><div>
 </div><div>Your trustee has been discharged prior to your discharge or
 </div><div>
 </div><div>You are still bankrupt and need your discharge
@@ -115,7 +114,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TMCZb/uSVLtkoYtVqM8O3vZQmsY4WMiu6634077YYBjuW/QBVtzR+MXvWI3I9h2vgC4fKUGPEo8uGfyvZsV1IfjK8bcnX/thd3EgiJe0e9GaD4DTUpnLvMCQpzazukWb">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="w/RsLAhiLMGP4hjcFIwhAIhIUwb3cG6SBNvpilYua3iEk2xQFq75xpj2SX2hO7xG4pCcquzUfPKI7pRD8i8K+4pd8ZX35EOhktGE94/1tTf9V8gbDQd7SFK0taOZ+97R">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
